Fixed styling issues for overflow

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 .TextArea {
   width: 400px;
   justify-content: center;
-  margin-left: 150px;
+  margin-left: 130px;
 }
 
 .Map {
@@ -44,6 +44,7 @@
   justify-self: center;
   width: 1200px;
   height: 550px;
+  margin-left: -50px;
 }
 
 .MapText {
@@ -59,8 +60,8 @@
 }
 
 .CountyImage {
-  height: 430px;
-  margin-left: -110px;
+  width: 500px;
+  margin-left: -30px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -77,12 +78,22 @@
 
   .TextArea {
     margin-top: 30px;
-    width: 300px;
     margin-left: 0px;
   }
 
   .CountyImage {
-    height: 280px;
+    width: 400px;
     margin-left: 0px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .MapText {
+    width: 350px;
+    margin-left: 20px;
+  }
+
+  .CountyImage {
+    height: 280px;
   }
 }
